test/analyzer/input_programs/invalid_programs/program19.tea
# Valid member access of MapLiteral with member as string
a := {high: 5, low: 5}
x := 'high'
a.x

# Valid at semantic check
# because 'lmu' is string
z := 'lmu'
a.z 


# Should throw error because member can't be integer
a.1